fix: Correction of jumps in the navbar mobile desktop

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,7 +19,7 @@
   font-size: 14px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   * {
     font-size: 16px;
   }
